# cuda8merCounter

./: .gitignore  CMakeLists.txt  README.md  build.sh  downloadHG38fasta.sh
exampleData/: testSeq2.fa
include/cpu/: cpuMultithread.hpp  cpuPipeline.hpp  cpu_multithread.hpp  kmerCounter.hpp
include/gpu/: gpuUtils.cuh  kmerCounter.cuh
include/utils/: constants.hpp  fastaParser.hpp  fasta_parser.hpp
src/cpu/: cpu.cpp  cpuConsumer.cpp  cpuMultithread.cpp  cpuPipeline.cpp  cpu_multithread.cpp  kmerCounter.cpp  mainCpu.cpp
src/gpu/: gpuPipeline.cu  gpuUtils.cu  mainGpu.cu
src/utils/: fastaParser.cpp  fasta_parser.cpp  out.cpp
stats/: cuda_profile.tsv_cuda_api_sum.csv  cuda_profile.tsv_cuda_gpu_kern_sum.csv  cuda_profile.tsv_cuda_gpu_mem_size_sum.csv  cuda_profile.tsv_cuda_gpu_mem_time_sum.csv  cuda_profile.tsv_osrt_sum.csv
